# MovinSync-Case-Study

./: CMakeLists.txt  README.md  parking_slots.txt  rides.txt  users.txt
include/: FileHandling.h  OfflineMode.h  ParkingLot.h  ParkingSlot.h  Pricing.h  RideService.h  User.h
src/: FileHandling.cpp  OfflineMode.cpp  ParkingLot.cpp  ParkingSlot.cpp  Pricing.cpp  RideService.cpp  User.cpp  main.cpp
